clarified sample App.Config settings

--- a/Polaris API Library/App.config.example
+++ b/Polaris API Library/App.config.example
@@ -4,8 +4,8 @@
     <!-- The following keys are required in the config file of the base project using the library -->
     <add key="papi_key" value="Your Polaris API Key" />
     <add key="papi_user" value="Your Polaris API User" />
-    <add key="papi_hash_hostname" value="https://polprodpac.clcdpc.org/PAPIService/REST/" />
-    <add key="papi_request_hostname" value="https://catalog.clcohio.org/PAPIService/REST/" />
+    <add key="papi_hash_hostname" value="https://polprodpac.clcdpc.org/PAPIService/REST/" /> <!-- Internal PAC URL -->
+	<add key="papi_request_hostname" value="https://catalog.clcohio.org/PAPIService/REST/" /> <!-- External PAC URL -->
     <!-- the active directory username and password to be used to make protected method calls -->
     <add key="staff_username" value="username" />
     <add key="staff_password" value="password" />
