Update project to build in VS2015
Update .gitignore from github/gitignore, install latest RestSharp
package, update references.

--- a/Polaris API Library/Polaris API Library.csproj
+++ b/Polaris API Library/Polaris API Library.csproj
@@ -38,9 +38,9 @@
     <DocumentationFile>bin\Release\Polaris API Library.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp, Version=104.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RestSharp.104.1\lib\net35\RestSharp.dll</HintPath>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net35\RestSharp.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
